k8s/infrastructure/statping/statping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statping
  namespace: infrastructure
  labels:
    app: statping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statping
  template:
    metadata:
      labels:
        app: statping
    spec:
      containers:
      - name: statping
        image: statping/statping
        ports:
          - containerPort: 8080
            name: "statping"
        volumeMounts:
        - name: statping-data
          mountPath: /app
      volumes:
        - name: statping-data
          persistentVolumeClaim:
            claimName: statping-data-pvc
