k8s/infrastructure/statping/statping-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: statping
  name: statping
  namespace: infrastructure
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: statping
  sessionAffinity: None
